--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -25,30 +25,17 @@
   <main>
     <div class="headline">
       <h1>Title</h1>
-      <p>
-        Type of work
-        <br>
-        Year
-      </p>
     </div>
     <div class="row">
       <div class="column left">
+        <i><h2>Description</h2></i>
+        <br>
+        <h3>Subheader</h3>
         <p>
-          <i>Description</i>
-          <br>
-          <br>
           Lorem ipsum...
           <br>
           <br>
           <br>
-        </p>
-        <h2>Software</h2>
-        <p>
-          X
-          <br>
-          Y
-          <br>
-          Z
         </p>
       </div>
       <div class="column right">
@@ -63,6 +50,28 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column left">
+        <p>Year</p>
+        <h2>[Add Year]</h2>
+        <br>
+        <p>Type</p>
+        <h2>[Add Type]</h2>
+      </div>
+      <div class="column right">
+        <p>Client/Collaboration</p>
+        <h2>
+          [Add Client/Collaborator]
+        </h2>
+        <br>
+        <p>Software</p>
+        <h2>
+          [Add Software 1]
+          <br>
+          [Add Software 2]
+        </h2>
       </div>
     </div>
     <div class="previewModal">
