--- a/pages/about.html
+++ b/pages/about.html
@@ -57,17 +57,26 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
     <h1>Clients</h1>
     <br>
-    <p style="color: #fff;">
+    <br>
+    <h2>
+      <a href="http://contestations.ai/" target="_blank">Contestations.AI</a>
+      <br>
+      <br>
       <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
+      <br>
       <br>
       <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
       <br>
+      <br>
       <a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a>
       <br>
+      <br>
       more_about_robots GmbH (Bernd Liepert)
-    </p><!-- 
+    </h2><!-- 
         <h1>Experience</h1>
         <br>
         <p>
@@ -102,23 +111,32 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
     <h1>Contact & Links</h1>
     <br>
-    <p>
+    <br>
+    <h2>
       <a href="mailto:tino.selic@gmail.com" target="_blank">Email</a>
+      <br>
       <br>
       <a href="https://www.linkedin.com/in/tino-selic/" target="_blank">LinkedIn</a>
       <br>
+      <br>
       <a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
+      <br>
       <br>
       <a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
       <br>
+      <br>
       <a href="https://github.com/tinoselic" target="_blank">GitHub</a>
+      <br>
       <br>
       <a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
       <br>
+      <br>
       <a href="https://www.pinterest.com/tinoselic/" target="_blank">Pinterest</a>
-    </p>
+    </h2>
     <!-- <div class="about-column-right">
         <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
         <br>
