--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       border-radius: 60px;
       width: fit-content;
       margin-top: 30px;
-      padding: 3px 24px;
+      padding: 0px 24px 6px 24px;
       transition-duration: 0.5s;
     }
 
