--- a/pages/design.html
+++ b/pages/design.html
@@ -26,6 +26,15 @@
   </header>
   <main>
     <div class="grid">
+      <a href="2024/2024_contestationsai.html">
+        <div class="project">
+          <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
+          <div class="text-box">
+            <div class="project-subtitle">2024</div>
+            <div class="project-title">Contestations.AI</div>
+          </div>
+        </div>
+      </a>
       <a href="2024/2024_gn_website.html">
         <div class="project">
           <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
