--- a/pages/design.html
+++ b/pages/design.html
@@ -30,8 +30,8 @@
         <div class="project">
           <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024</div>
-            <div class="project-title">Contestations.AI</div>
+            <div class="project-subtitle">2024<br>Volunteer Work</div>
+            <div class="project-title">Contestations AI</div>
           </div>
         </div>
       </a>
@@ -39,7 +39,7 @@
         <div class="project">
           <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024</div>
+            <div class="project-subtitle">2024<br>Client: Grönlund-Nisunen</div>
             <div class="project-title">g-n.fi</div>
           </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="project">
           <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024</div>
+            <div class="project-subtitle">2024<br>Collaboration with J.C Muyonjo</div>
             <div class="project-title">Adungu & Engoma</div>
           </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="project">
           <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024</div>
+            <div class="project-subtitle">2024<br>Client: Marko Vuokola</div>
             <div class="project-title">Screen Installation<br>Concept Visualisation</div>
           </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="project">
           <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2023</div>
+            <div class="project-subtitle">2023<br>Client: Grönlund-Nisunen</div>
             <div class="project-title">84,3 m3/h</div>
           </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="project">
           <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2022</div>
+            <div class="project-subtitle">2022<br>Client: Forum Mentoring eV</div>
             <div class="project-title">Quality Standard Brochure</div>
           </div>
         </div>
@@ -85,7 +85,7 @@
           <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
             alt="/2019_more_about_robots_BusinessCard_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2019</div>
+            <div class="project-subtitle">2019<br>Client: more_about_robots GmbH</div>
             <div class="project-title">Business Card</div>
           </div>
         </div>
